<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/verify_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_des"
        android:src="@drawable/back" />

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="135dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:contentDescription="@string/key_des"
                android:src="@drawable/verify_key" />

            <EditText
                android:id="@+id/verify_code_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="left|center"
                android:hint="@string/verify_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColorHint="@color/white"
            	android:textSize="@dimen/account_text_size"  >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/verify_resend_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/verify_resend_btn_on_finish_shape"
                android:text="@string/verify_resend"
                android:textColor="#a1a19f"
                android:textSize="13sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:layout_marginTop="5dp"
            android:background="#959595" />

        <Button
            android:id="@+id/verify_next_btn"
            android:layout_width="match_parent"
            android:layout_height="46.7dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:text="@string/register_next"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:text="@string/accept_agreement"
        android:textColor="@color/white" />

</LinearLayout>