<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="13dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginTop="115dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/login_account_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="33.3dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:contentDescription="@string/account_des"
                android:src="@drawable/login_phone" />

            <EditText
                android:id="@+id/login_account_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="left|center"
                android:hint="@string/login_account_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:textColor="@color/account_text_color"
                android:textColorHint="@color/account_hint_color"
                android:textSize="@dimen/account_text_size" >

                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/login_delete_account_text_img"
                android:layout_width="13.3dp"
                android:layout_height="13.3dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/delete_icon_des"
                android:src="@drawable/edit_delete"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:background="#959595" />

        <LinearLayout
            android:id="@+id/login_pass_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="26.7dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:contentDescription="@string/pass_des"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/login_pass_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#0000"
                android:gravity="left|center"
                android:hint="@string/login_pass_hint"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/account_text_color"
                android:textColorHint="@color/account_hint_color"
                android:textSize="@dimen/account_text_size" />

            <ImageView
                android:id="@+id/login_delete_pass_text_img"
                android:layout_width="13.3dp"
                android:layout_height="13.3dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/delete_icon_des"
                android:src="@drawable/edit_delete"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.66dp"
            android:background="#959595" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="46.7dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_shape"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="15dp" >

            <TextView
                android:id="@+id/login_forget_pass_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/login_forget_pass"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/login_register_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/register"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:text="@string/accept_agreement"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>