<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/start_bg">

    <ImageView
        android:id="@+id/verify_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/back_des"
        android:src="@drawable/back" />
    
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_photo"
            android:contentDescription="@string/profile_photo_des"/>
    <LinearLayout
            android:layout_width="267dp"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@drawable/profile_nickname"
                    android:contentDescription="@string/profile_nickname_des"/>

            <EditText
                    android:id="@+id/register_account_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="#0000"
                    android:gravity="left|center"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true">

                <requestFocus/>
            </EditText>
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0.66dp"
                android:layout_marginTop="5dp"
                android:background="#959595"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:src="@drawable/profile_place"
                    android:contentDescription="@string/profile_place_des"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:background="#0000"
                    android:gravity="left|center"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true">

                <requestFocus/>
            </EditText>
        </LinearLayout>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="0.66dp"
                android:layout_marginTop="5dp"
                android:background="#959595"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_sex"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>
            <RadioGroup
                    android:orientation="horizontal"
                    android:contentDescription="@string/profile_nickname_des"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content">
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioMale"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:drawableRight="@drawable/radio_style"
                        android:button="@null"
                        android:text="@string/profile_sex_male"
                        android:checked="true">
                </RadioButton>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/radioFemale"
                        android:drawableRight="@drawable/radio_style"
                        android:button="@null"
                        android:textSize="17sp"
                        android:textColor="@color/white"
                        android:text="@string/profile_sex_famale">
                </RadioButton>
            </RadioGroup>


        </LinearLayout>


        <Button
                android:id="@+id/register_next_btn"
                android:layout_width="match_parent"
                android:layout_height="46.7dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_shape"
                android:text="@string/peofile_complete"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>